--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -258,7 +258,7 @@
                     <div class="col-sm-12">
                         <div class="white-box">
                             <h3 class="box-title">Simple Basic Map</h3>
-                            <div id="gmaps-simple" class="gmaps" style="height: 700px; position: relative; overflow: hidden;">
+                            <div id="map" class="gmaps" style="height: 700px; position: relative; overflow: hidden;">
                                 <div style="height: 100%; width: 100%; position: absolute; top: 0px; left: 0px; background-color: rgb(229, 227, 223);">
                                     <!--
 
@@ -512,7 +512,7 @@
 
     <!-- Bootstrap tether Core JavaScript -->
     <!-- google maps api -->
-    <script src="http://maps.google.com/maps/api/js?key=AIzaSyAXilRnHK49WaB5KmhqgXwcscbodxc5g0s"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAXilRnHK49WaB5KmhqgXwcscbodxc5g0s&callback=initMap&libraries=&v=weekly"defer></script>
     <script src="plugins/bower_components/gmaps/gmaps.min.js"></script>
     <script src="plugins/bower_components/gmaps/jquery.gmaps.js"></script>
     <!--Custom JavaScript -->
