added close info box functionality

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -272,7 +272,7 @@
                             <section id="info-panel" style=" margin-right: 60px; margin-top: 90px;  height: 650px; position: absolute; width: 400px; z-index: 8; right: 0; top: 0; background: #fff; padding: 10px; ">
                                 <div id="info-box" style="background: #fff; margin: 10px; ">
                                     <span id="info-box-close-button" class="icon--close" style="position: static; float: right;">
-                                        <button style="border-width: 0px; background-color: #fff">
+                                        <button id="close_info" style="border-width: 0px; background-color: #fff">
                                             <i class="fas fa-times"></i>
                                         </button>
                                     </span>
@@ -283,7 +283,28 @@
                                     <hr class="title-bar-bottom">
                                     
                                     <div id="info-box-scroller">
-                                        <div id="info-box-content"><p><span class="info-box-field-label">Customer Outages:</span><span class="info-box-field-value">11</span></p><p><span class="info-box-field-label">Start Time:</span><span class="info-box-field-value">Nov 14 2020, 8:06 AM ET</span></p><p><span class="info-box-field-label">Estimated Restoration:</span><span class="info-box-field-value">Nov 14 2020, 2:30 PM ET</span></p><p><span class="info-box-field-label">Cause:</span><span class="info-box-field-value">Planned Maintenance</span></p><p><span class="info-box-field-label">Outage ID:</span><span class="info-box-field-value">3766701</span></p></div>
+                                        <div id="info-box-content">
+                                        <p>
+                                            <span class="info-box-field-label">Customer Outages:</span>
+                                            <span class="info-box-field-value" id="voltage">11</span>
+                                        </p>
+                                        <p>
+                                            <span class="info-box-field-label">Start Time:</span>
+                                            <span class="info-box-field-value">Nov 14 2020, 8:06 AM ET</span>
+                                        </p>
+                                        <p>
+                                            <span class="info-box-field-label">Estimated Restoration:</span>
+                                            <span class="info-box-field-value">Nov 14 2020, 2:30 PM ET</span>
+                                        </p>
+                                        <p>
+                                            <span class="info-box-field-label">Cause:</span>
+                                            <span class="info-box-field-value">Planned Maintenance</span>
+                                        </p>
+                                        <p>
+                                            <span class="info-box-field-label">Outage ID:</span>
+                                            <span class="info-box-field-value">3766701</span>
+                                        </p>
+                                        </div>
                                     </div>
                                     <div style="width: 200px; position: center">
                                         <img src="https://osuhackathondata.s3.us-east-2.amazonaws.com/000006-backleft-43a7932a-33b1-4ca6-af1a-fad37fbeecaa-76.jpg" style="max-width: 100%; max-height: 100%;"/>
@@ -470,7 +491,7 @@
                             </div>
                             <div class="comment-body d-flex">
                                 <div class="user-img">
-                                    <img src="plugins/images/users/sonu.jpg" alt="user"
+                                    <img src="" alt="user"
                                          class="img-circle">
                                 </div>
                                 <div class="mail-contnet">
@@ -487,7 +508,7 @@
                             </div>
                             <div class="comment-body d-flex border-0">
                                 <div class="user-img">
-                                    <img src="plugins/images/users/arijit.jpg" alt="user"
+                                    <img src="" alt="user"
                                          class="img-circle">
                                 </div>
                                 <div class="mail-contnet">
