added json parsing for front end

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -12,7 +12,7 @@
     <title></title>
     <link rel="canonical" href="" />
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="plugins/images/favicon.png">
+    
     <!-- Custom CSS -->
     <link href="plugins/bower_components/chartist/dist/chartist.min.css" rel="stylesheet">
     <link rel="stylesheet" href="plugins/bower_components/chartist-plugin-tooltips/dist/chartist-plugin-tooltip.css">
@@ -46,15 +46,12 @@
                     <!-- ============================================================== -->
                     <a class="navbar-brand" href="dashboard.html">
                         <!-- Logo icon -->
-                        <b class="logo-icon">
-                            <!-- Dark Logo icon -->
-                            <img src="plugins/images/logo-icon.png" alt="homepage" />
-                        </b>
+                       
                         <!--End Logo icon -->
                         <!-- Logo text -->
-                        <span class="logo-text">
+                        <span class="logo-text" style="height: 60px">
                             <!-- dark Logo text -->
-                            <img src="plugins/images/logo-text.png" alt="homepage" />
+                            <img src="images/1280px-AEP_logo.svg.png" alt="homepage" style="height:90%" />
                         </span>
                     </a>
                     <!-- ============================================================== -->
@@ -135,18 +132,12 @@
                                 <span class="hide-menu">Profile</span>
                             </a>
                         </li>
+                        <!--
                         <li class="sidebar-item">
                             <a class="sidebar-link waves-effect waves-dark sidebar-link" href="basic-table.html"
                                aria-expanded="false">
                                 <i class="fa fa-table" aria-hidden="true"></i>
                                 <span class="hide-menu">Basic Table</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link waves-effect waves-dark sidebar-link" href="fontawesome.html"
-                               aria-expanded="false">
-                                <i class="fa fa-font" aria-hidden="true"></i>
-                                <span class="hide-menu">Icon</span>
                             </a>
                         </li>
                         <li class="sidebar-item">
@@ -163,7 +154,7 @@
                                 <span class="hide-menu">Blank Page</span>
                             </a>
                         </li>
-
+                        -->
 
                     </ul>
 
@@ -285,15 +276,15 @@
                                     <div id="info-box-scroller">
                                         <div id="info-box-content">
                                         <p>
-                                            <span class="info-box-field-label">Customer Outages:</span>
-                                            <span class="info-box-field-value" id="voltage">11</span>
+                                            <span class="info-box-field-label">Voltage:</span>
+                                            <span class="info-box-field-value" id="voltage">High Voltage</span>
                                         </p>
                                         <p>
-                                            <span class="info-box-field-label">Start Time:</span>
-                                            <span class="info-box-field-value">Nov 14 2020, 8:06 AM ET</span>
+                                            <span class="info-box-field-label">Voltage:</span>
+                                            <span class="info-box-field-value">High Voltage</span>
                                         </p>
                                         <p>
-                                            <span class="info-box-field-label">Estimated Restoration:</span>
+                                            <span class="info-box-field-label">Last Maintaince Restoration:</span>
                                             <span class="info-box-field-value">Nov 14 2020, 2:30 PM ET</span>
                                         </p>
                                         <p>
