Added pole id tracking

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -292,8 +292,8 @@
                                             <span class="info-box-field-value">Planned Maintenance</span>
                                         </p>
                                         <p>
-                                            <span class="info-box-field-label">Outage ID:</span>
-                                            <span class="info-box-field-value">3766701</span>
+                                            <span class="info-box-field-label">Pole ID:</span>
+                                            <span class="info-box-field-value" id="pole_id">1</span>
                                         </p>
                                         </div>
                                     </div>
