Changed the pop up box values again

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -277,23 +277,28 @@
                                         <div id="info-box-content">
                                             <p>
                                                 <span class="info-box-field-label">Voltage:</span>
-                                                <span class="info-box-field-value" id="voltage">High Voltage</span>
+                                                <span class="info-box-field-value">Low Voltage</span>
                                             </p>
-                                            <p>
-                                                <span class="info-box-field-label">Voltage:</span>
-                                                <span class="info-box-field-value" id="voltage">High Voltage</span>
+                                             <p>
+                                                <span class="info-box-field-label"># of Crossarms:</span>
+                                                <span class="info-box-field-value" id="numCrossarms"></span>
                                             </p>
-                                            <p>
+                                             <p>
+                                                <span class="info-box-field-label"># of Insulators:</span>
+                                                <span class="info-box-field-value" id="numInsulator"></span>
+                                            </p>
+                                          <p>
                                                 <span class="info-box-field-label">Last Maintaince Restoration:</span>
-                                                <span class="info-box-field-value">Nov 14 2020, 2:30 PM ET</span>
-                                            </p>
-                                            <p>
-                                                <span class="info-box-field-label">Cause:</span>
-                                                <span class="info-box-field-value">Planned Maintenance</span>
+                                                <span class="info-box-field-value" id="maintDate"></span>
                                             </p>
                                             <p>
                                                 <span class="info-box-field-label">Pole ID:</span>
                                                 <span class="info-box-field-value" id="pole_id">1</span>
+                                            </p>
+                                            <p>
+                                                <span class="info-box-field-label">Lat/Lng</span>
+                                                <span class="info-box-field-value" id="pole_coord"></span>
+
                                             </p>
                                         </div>
                                     </div>
