added additional data fields

--- a/Frontend/dashboard.html
+++ b/Frontend/dashboard.html
@@ -277,7 +277,7 @@
                                         <div id="info-box-content">
                                             <p>
                                                 <span class="info-box-field-label">Voltage:</span>
-                                                <span class="info-box-field-value">Low Voltage</span>
+                                                <span class="info-box-field-value" id="voltage">Low Voltage</span>
                                             </p>
                                              <p>
                                                 <span class="info-box-field-label"># of Crossarms:</span>
@@ -288,7 +288,7 @@
                                                 <span class="info-box-field-value" id="numInsulator"></span>
                                             </p>
                                           <p>
-                                                <span class="info-box-field-label">Last Maintaince Restoration:</span>
+                                                <span class="info-box-field-label">Last Maintaince Event:</span>
                                                 <span class="info-box-field-value" id="maintDate"></span>
                                             </p>
                                             <p>
@@ -298,7 +298,6 @@
                                             <p>
                                                 <span class="info-box-field-label">Lat/Lng</span>
                                                 <span class="info-box-field-value" id="pole_coord"></span>
-
                                             </p>
                                         </div>
                                     </div>
@@ -345,11 +344,6 @@
 
 
 
-                                    <!-- THIS IS THE GPS AND DATE THAT GOES UNDER THE IMAGE-->
-                                    <p>
-                                        <span class="info-box-field-label">Lat/Lng</span>
-                                        <span class="info-box-field-value" id="pole_coord"></span>
-                                    </p>
                                 </div>
                             </section>
 
